[package]
name = "shuttle"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Binary to run pavex service in shuttle"
keywords = ["shuttle", "pavex"]

[dependencies]
hyper = { version = "0.14.23", features = ["server", "tcp", "http1"] }
shuttle-runtime = { version = "0.43.0", default-features = false }
pavex = { version = "0.1.25" }
tracing = "0.1"
dotenvy = "0.15"
anyhow = "1"
server = { path = "../server" }
server_sdk = { path = "../server_sdk" }
